--- a/client/css/entry.css
+++ b/client/css/entry.css
@@ -22,7 +22,7 @@ body {
   box-shadow: 0px 0px 16px lightgrey;
   font-size: 24px;
   left: 50%;
-  padding: 4px;
+  padding: 16px;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -33,7 +33,7 @@ body {
   box-shadow: 0px 0px 16px lightgrey;
   font-size: 24px;
   left: 50%;
-  padding: 4px;
+  padding: 16px;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -98,6 +98,16 @@ body {
   padding: 4px;
   position: absolute;
   top: 192px;
+}
+
+.place-contender .question {
+  background-color: white;
+  bottom: 4px;
+  box-shadow: 0px 0px 16px lightgray;
+  font-size: 24px;
+  left: 321px;
+  padding: 16px;
+  position: absolute;
 }
 
 .place-contender .no-button {
